# aoc-cpp

./: CMakeLists.txt  Makefile  README.md
scripts/: build.sh  run-test-coverage.sh  run-test.sh
src/: CMakeLists.txt
src/2015/: CMakeLists.txt  README.md  d1p1.cpp  d1p2.cpp  d2p1.cpp  d2p2.cpp  d3p1.cpp  d3p2.cpp  d4p1.cpp  d4p2.cpp  d5p1.cpp  d5p2.cpp  d6p1.cpp  d6p2.cpp  d7p1.cpp  d7p2.cpp  d8p1.cpp  d8p2.cpp
src/extra/: CMakeLists.txt
